// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty menu 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    refreshControl={undefined}
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`renders with MenuItems 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    refreshControl={undefined}
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(216,216,216,1)",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 19,
            },
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          hello
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(216,216,216,1)",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 19,
            },
            Object {},
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          next
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgba(74,74,74,1)",
                "fontFamily": "NunitoSans-Light",
                "fontSize": 14,
                "lineHeight": 22,
              },
              Object {},
            ]
          }
        >
          stuff
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
